# python-basic-tasks-solutions

./: README.md
task_06/: config.py  crud.py  main.py  pyproject.toml  schemas.py
task_06/alembic/: env.py
task_06/alembic/versions/: 2023_12_01_0057-cf9a680a698f_create_currencies_table.py
task_06/models/: __init__.py  base.py  currency_rates.py  db_session_async.py
task_08/: pyproject.toml
task_08/todoproject/myauth/: forms.py  models.py  urls.py  views.py
task_08/todoproject/templates/: base.html  index.html
task_08/todoproject/todo_list/: forms.py  models.py  urls.py  views.py
task_08/todoproject/todoproject/: settings.py  urls.py
task_project/: README.md  docker-compose.yml  main.py  pyproject.toml
task_project/core/: helpers.py
task_project/core/auth/: __init__.py  login_helper.py
task_project/core/models/: __init__.py  category.py  movie.py  user.py
task_project/migrations/: alembic.ini
task_project/migrations/versions/: 2023_12_07_0218-13ce51a965ec_create_category_table.py  2023_12_07_0218-ff318a784072_create_movie_table.py  2023_12_09_1727-7a91fe899024_create_user_table.py
task_project/templates/: base.html  index.html
task_project/templates/auth/: login.html  register.html
task_project/templates/categories/: add.html  category-movies.html  delete.html  details.html  list.html
task_project/templates/macros/: common-delete.html  errors.html  movies-list.html
task_project/templates/movies/: add.html  delete.html  details.html  list.html
task_project/views/: auth.py  categories.py  movies.py
task_project/views/forms/: auth.py  (+2 more)
(+40 files in other folders)
